# soroban-sdk-tools-demo

./: .gitignore  Cargo.toml  README.md  SCRIPT.md  walkthrough.html
bindings/demo-token/: README.md  package.json
bindings/demo-token/src/: index.ts
bindings/demo-vault/: README.md  package.json
bindings/demo-vault/src/: index.ts
contracts/demo-token/: Cargo.toml
contracts/demo-token/src/: lib.rs  test.rs
contracts/demo-token/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_insufficient_balance_error.1.json  test_mint_and_balance.1.json  test_transfer.1.json  test_transfer_with_auth_client.1.json  test_transfer_with_ed25519_signature.1.json  test_transfer_with_passkey_signature.1.json
contracts/demo-vault/: Cargo.toml
contracts/demo-vault/src/: lib.rs  test.rs
contracts/demo-vault/test_snapshots/test/: test_deposit_and_withdraw.1.json  test_deposit_exceeds_allowance.1.json  test_withdraw_exceeds_deposit.1.json
contracts/manual-token/: Cargo.toml
contracts/manual-token/src/: lib.rs  test.rs
contracts/manual-token/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_insufficient_balance_error.1.json  test_mint_and_balance.1.json  test_transfer.1.json  test_transfer_with_manual_mock_auth.1.json
scripts/: generate-bindings.sh
